set up color and look

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 </head>
 <body>
 	<h1>Alexa's SSH sshhhhhhhhhhhhhh test</h1>
-	<h6>Be verrrrrrryyyy quieeeetttt</h6>
+
+	<div class="box">
+		<h6>Be verrrrrrryyyy quieeeetttt</h6>
+	</div>
+
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
